Fixed stretching issue on profile picture. Adjusted sizing max height and width on profile picture to conserve aspect ratio during resizing of browser.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,13 @@
+/* Sticky Footer Page Content */
+html,
+body {
+  height: 100%;
+}
+
+#page-content {
+  flex: 1 0 auto;
+}
+
 /* Navigation Bar */
 .NavBar {
   border-bottom: solid #ccc;
@@ -77,17 +87,17 @@ h2 {
 }
 
 .BioTop {
-  margin-top: 10px;
+  margin-top: 20px;
 }
 
-/* Sticky Footer */
-html,
-body {
+#ProfilePic {
+  padding: 0px 20px;
   height: 100%;
+  width: 100%;
 }
 
-#page-content {
-  flex: 1 0 auto;
+#pRight {
+  padding: 0px 20px 20px 0px;
 }
 
 #sticky-footer {
